src/AutoStep/Language/Test/Parser/AutoStepParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\AutoStepParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AutoStep.Language.Test.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
internal partial class AutoStepParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		FEATURE=1, SCENARIO=2, SCENARIO_OUTLINE=3, EXAMPLES=4, STEP_DEFINE=5, 
		BACKGROUND=6, TAG=7, OPTION=8, GIVEN=9, WHEN=10, THEN=11, AND=12, NEWLINE=13, 
		WORD=14, WS=15, TEXT_COMMENT=16, ESCAPED_TABLE_DELIMITER=17, TABLE_START=18, 
		ANNOTATION_COMMENT=19, ANNOTATION_TEXT=20, ANNOTATION_ERR_MARKER=21, ANNOTATION_WS=22, 
		ANNOTATION_NEWLINE=23, NAME_COMMENT=24, STATEMENT_ESCAPED_QUOTE=25, STATEMENT_ESCAPED_DBLQUOTE=26, 
		STATEMENT_ESCAPED_VARSTART=27, STATEMENT_ESCAPED_VAREND=28, STATEMENT_VAR_START=29, 
		STATEMENT_VAR_STOP=30, STATEMENT_QUOTE=31, STATEMENT_DOUBLE_QUOTE=32, 
		STATEMENT_FLOAT=33, STATEMENT_INT=34, STATEMENT_COLON=35, STATEMENT_WORD=36, 
		STATEMENT_COMMENT=37, DEF_GIVEN=38, DEF_WHEN=39, DEF_THEN=40, DEF_ESCAPED_LCURLY=41, 
		DEF_ESCAPED_RCURLY=42, DEF_LCURLY=43, DEF_RCURLY=44, DEF_COLON=45, DEF_WORD=46, 
		DEF_COMMENT=47, CELL_ESCAPED_VARSTART=48, CELL_ESCAPED_VAREND=49, CELL_VAR_START=50, 
		CELL_VAR_STOP=51, CELL_WORD=52, CELL_FLOAT=53, CELL_INT=54, CELL_COLON=55, 
		CELL_ESCAPED_DELIMITER=56, CELL_DELIMITER=57, ROW_COMMENT=58;
	public const int
		RULE_file = 0, RULE_fileEntity = 1, RULE_stepDefinitionBlock = 2, RULE_stepDefinition = 3, 
		RULE_stepDefinitionBody = 4, RULE_stepDeclaration = 5, RULE_stepDeclarationBody = 6, 
		RULE_stepDeclarationSection = 7, RULE_stepDeclarationArgument = 8, RULE_stepDeclarationArgumentName = 9, 
		RULE_stepDeclarationTypeHint = 10, RULE_stepDeclarationSectionContent = 11, 
		RULE_featureBlock = 12, RULE_annotations = 13, RULE_annotation = 14, RULE_annotationBody = 15, 
		RULE_featureDefinition = 16, RULE_featureTitle = 17, RULE_featureBody = 18, 
		RULE_backgroundBlock = 19, RULE_backgroundBody = 20, RULE_scenarioBlock = 21, 
		RULE_scenarioDefinition = 22, RULE_scenarioTitle = 23, RULE_scenarioBody = 24, 
		RULE_stepCollectionBodyLine = 25, RULE_statementBlock = 26, RULE_statement = 27, 
		RULE_statementBody = 28, RULE_statementSection = 29, RULE_statementVariableName = 30, 
		RULE_statementVarPhrase = 31, RULE_examples = 32, RULE_exampleBlock = 33, 
		RULE_tableBlock = 34, RULE_tableHeader = 35, RULE_tableHeaderCell = 36, 
		RULE_tableRow = 37, RULE_tableRowCell = 38, RULE_tableRowCellContent = 39, 
		RULE_cellContentBlock = 40, RULE_cellVariableName = 41, RULE_cellVarPhrase = 42, 
		RULE_text = 43, RULE_line = 44, RULE_description = 45, RULE_onlyLine = 46, 
		RULE_lineTerm = 47;
	public static readonly string[] ruleNames = {
		"file", "fileEntity", "stepDefinitionBlock", "stepDefinition", "stepDefinitionBody", 
		"stepDeclaration", "stepDeclarationBody", "stepDeclarationSection", "stepDeclarationArgument", 
		"stepDeclarationArgumentName", "stepDeclarationTypeHint", "stepDeclarationSectionContent", 
		"featureBlock", "annotations", "annotation", "annotationBody", "featureDefinition", 
		"featureTitle", "featureBody", "backgroundBlock", "backgroundBody", "scenarioBlock", 
		"scenarioDefinition", "scenarioTitle", "scenarioBody", "stepCollectionBodyLine", 
		"statementBlock", "statement", "statementBody", "statementSection", "statementVariableName", 
		"statementVarPhrase", "examples", "exampleBlock", "tableBlock", "tableHeader", 
		"tableHeaderCell", "tableRow", "tableRowCell", "tableRowCellContent", 
		"cellContentBlock", "cellVariableName", "cellVarPhrase", "text", "line", 
		"description", "onlyLine", "lineTerm"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, "'Background:'", "'@'", "'$'", null, 
		null, null, "'And'", null, null, null, null, null, null, null, null, null, 
		null, null, null, "'\\''", "'\\\"'", null, null, null, null, "'''", "'\"'", 
		null, null, null, null, null, null, null, null, "'\\{'", "'\\}'", "'{'", 
		"'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FEATURE", "SCENARIO", "SCENARIO_OUTLINE", "EXAMPLES", "STEP_DEFINE", 
		"BACKGROUND", "TAG", "OPTION", "GIVEN", "WHEN", "THEN", "AND", "NEWLINE", 
		"WORD", "WS", "TEXT_COMMENT", "ESCAPED_TABLE_DELIMITER", "TABLE_START", 
		"ANNOTATION_COMMENT", "ANNOTATION_TEXT", "ANNOTATION_ERR_MARKER", "ANNOTATION_WS", 
		"ANNOTATION_NEWLINE", "NAME_COMMENT", "STATEMENT_ESCAPED_QUOTE", "STATEMENT_ESCAPED_DBLQUOTE", 
		"STATEMENT_ESCAPED_VARSTART", "STATEMENT_ESCAPED_VAREND", "STATEMENT_VAR_START", 
		"STATEMENT_VAR_STOP", "STATEMENT_QUOTE", "STATEMENT_DOUBLE_QUOTE", "STATEMENT_FLOAT", 
		"STATEMENT_INT", "STATEMENT_COLON", "STATEMENT_WORD", "STATEMENT_COMMENT", 
		"DEF_GIVEN", "DEF_WHEN", "DEF_THEN", "DEF_ESCAPED_LCURLY", "DEF_ESCAPED_RCURLY", 
		"DEF_LCURLY", "DEF_RCURLY", "DEF_COLON", "DEF_WORD", "DEF_COMMENT", "CELL_ESCAPED_VARSTART", 
		"CELL_ESCAPED_VAREND", "CELL_VAR_START", "CELL_VAR_STOP", "CELL_WORD", 
		"CELL_FLOAT", "CELL_INT", "CELL_COLON", "CELL_ESCAPED_DELIMITER", "CELL_DELIMITER", 
		"ROW_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AutoStepParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static AutoStepParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AutoStepParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AutoStepParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	internal partial class FileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(AutoStepParser.Eof, 0); }
		public ITerminalNode[] NEWLINE() { return GetTokens(AutoStepParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(AutoStepParser.NEWLINE, i);
		}
		public FileEntityContext[] fileEntity() {
			return GetRuleContexts<FileEntityContext>();
		}
		public FileEntityContext fileEntity(int i) {
			return GetRuleContext<FileEntityContext>(i);
		}
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 96; Match(NEWLINE);
					}
					} 
				}
				State = 101;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 103;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 102; fileEntity();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 105;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 107; Match(WS);
				}
			}

			State = 110; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class FileEntityContext : ParserRuleContext {
		public FeatureBlockContext featureBlock() {
			return GetRuleContext<FeatureBlockContext>(0);
		}
		public StepDefinitionBlockContext stepDefinitionBlock() {
			return GetRuleContext<StepDefinitionBlockContext>(0);
		}
		public FileEntityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileEntity; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterFileEntity(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitFileEntity(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileEntity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileEntityContext fileEntity() {
		FileEntityContext _localctx = new FileEntityContext(Context, State);
		EnterRule(_localctx, 2, RULE_fileEntity);
		try {
			State = 114;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112; featureBlock();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 113; stepDefinitionBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class StepDefinitionBlockContext : ParserRuleContext {
		public AnnotationsContext annotations() {
			return GetRuleContext<AnnotationsContext>(0);
		}
		public StepDefinitionContext stepDefinition() {
			return GetRuleContext<StepDefinitionContext>(0);
		}
		public StepDefinitionBodyContext stepDefinitionBody() {
			return GetRuleContext<StepDefinitionBodyContext>(0);
		}
		public StepDefinitionBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stepDefinitionBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterStepDefinitionBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitStepDefinitionBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStepDefinitionBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StepDefinitionBlockContext stepDefinitionBlock() {
		StepDefinitionBlockContext _localctx = new StepDefinitionBlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_stepDefinitionBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; annotations();
			State = 117; stepDefinition();
			State = 118; stepDefinitionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class StepDefinitionContext : ParserRuleContext {
		public ITerminalNode STEP_DEFINE() { return GetToken(AutoStepParser.STEP_DEFINE, 0); }
		public StepDeclarationContext stepDeclaration() {
			return GetRuleContext<StepDeclarationContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(AutoStepParser.NEWLINE, 0); }
		public ITerminalNode Eof() { return GetToken(AutoStepParser.Eof, 0); }
		public ITerminalNode[] WS() { return GetTokens(AutoStepParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(AutoStepParser.WS, i);
		}
		public DescriptionContext description() {
			return GetRuleContext<DescriptionContext>(0);
		}
		public StepDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stepDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterStepDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitStepDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStepDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StepDefinitionContext stepDefinition() {
		StepDefinitionContext _localctx = new StepDefinitionContext(Context, State);
		EnterRule(_localctx, 6, RULE_stepDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 120; Match(WS);
				}
			}

			State = 123; Match(STEP_DEFINE);
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 124; Match(WS);
				}
			}

			State = 127; stepDeclaration();
			State = 128;
			_la = TokenStream.LA(1);
			if ( !(_la==Eof || _la==NEWLINE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 130;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 129; description();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class StepDefinitionBodyContext : ParserRuleContext {
		public StepCollectionBodyLineContext[] stepCollectionBodyLine() {
			return GetRuleContexts<StepCollectionBodyLineContext>();
		}
		public StepCollectionBodyLineContext stepCollectionBodyLine(int i) {
			return GetRuleContext<StepCollectionBodyLineContext>(i);
		}
		public StepDefinitionBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stepDefinitionBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterStepDefinitionBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitStepDefinitionBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStepDefinitionBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StepDefinitionBodyContext stepDefinitionBody() {
		StepDefinitionBodyContext _localctx = new StepDefinitionBodyContext(Context, State);
		EnterRule(_localctx, 8, RULE_stepDefinitionBody);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 132; stepCollectionBodyLine();
					}
					} 
				}
				State = 137;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class StepDeclarationContext : ParserRuleContext {
		public StepDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stepDeclaration; } }
	 
		public StepDeclarationContext() { }
		public virtual void CopyFrom(StepDeclarationContext context) {
			base.CopyFrom(context);
		}
	}
	internal partial class DeclareGivenContext : StepDeclarationContext {
		public ITerminalNode DEF_GIVEN() { return GetToken(AutoStepParser.DEF_GIVEN, 0); }
		public StepDeclarationBodyContext stepDeclarationBody() {
			return GetRuleContext<StepDeclarationBodyContext>(0);
		}
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public DeclareGivenContext(StepDeclarationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterDeclareGiven(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitDeclareGiven(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclareGiven(this);
			else return visitor.VisitChildren(this);
		}
	}
	internal partial class DeclareWhenContext : StepDeclarationContext {
		public ITerminalNode DEF_WHEN() { return GetToken(AutoStepParser.DEF_WHEN, 0); }
		public StepDeclarationBodyContext stepDeclarationBody() {
			return GetRuleContext<StepDeclarationBodyContext>(0);
		}
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public DeclareWhenContext(StepDeclarationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterDeclareWhen(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitDeclareWhen(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclareWhen(this);
			else return visitor.VisitChildren(this);
		}
	}
	internal partial class DeclareThenContext : StepDeclarationContext {
		public ITerminalNode DEF_THEN() { return GetToken(AutoStepParser.DEF_THEN, 0); }
		public StepDeclarationBodyContext stepDeclarationBody() {
			return GetRuleContext<StepDeclarationBodyContext>(0);
		}
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public DeclareThenContext(StepDeclarationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterDeclareThen(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitDeclareThen(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclareThen(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StepDeclarationContext stepDeclaration() {
		StepDeclarationContext _localctx = new StepDeclarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_stepDeclaration);
		try {
			State = 153;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DEF_GIVEN:
				_localctx = new DeclareGivenContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 138; Match(DEF_GIVEN);
				State = 140;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
				case 1:
					{
					State = 139; Match(WS);
					}
					break;
				}
				State = 142; stepDeclarationBody();
				}
				break;
			case DEF_WHEN:
				_localctx = new DeclareWhenContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 143; Match(DEF_WHEN);
				State = 145;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
				case 1:
					{
					State = 144; Match(WS);
					}
					break;
				}
				State = 147; stepDeclarationBody();
				}
				break;
			case DEF_THEN:
				_localctx = new DeclareThenContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 148; Match(DEF_THEN);
				State = 150;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
				case 1:
					{
					State = 149; Match(WS);
					}
					break;
				}
				State = 152; stepDeclarationBody();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
